practice of advanced css

--- a/display.html
+++ b/display.html
@@ -10,23 +10,21 @@
       border: 2px solid red;
       display: inline;
     }
-    img {
-      height: 500px;
-      width: 400px;
-    }
-    .pregrf {
+    .container ul li {
       display: inline;
+      margin: 20px;
     }
   </style>
 
   <body>
     <div class="container">
-      <img
-        src="./images/salman-sidheek-qI770RqhZ_Y-unsplash.jpg"
-        alt="picture"
-      />
-      sit amet consectetur adipisicing elit
-      <p class="pregrf">
+      <ul>
+        <li>home</li>
+        <li>about us</li>
+        <li>contact</li>
+      </ul>
+
+      <p class="">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel animi
         repellat aperiam laboriosam repudiandae mollitia error est harum sequi
         consequatur nobis ratione porro itaque, fuga amet recusandae? Atque,
