--- a/z-index.html
+++ b/z-index.html
@@ -22,16 +22,15 @@
     }
 
     div.img {
-      position: absolute;
+      position: relative;
       width: 100%;
       height: 550px;
-      z-index: 2;
+      z-index: 1;
     }
-    div.imgs img {
-      width: 200%;
+    .imgs img {
+      /* width: 200%; */
     }
     .contant {
-      position: absolute;
       position: absolute;
       width: 150px;
       height: 180px;
@@ -60,10 +59,7 @@
         </p>
       </div>
       <div class="imgs">
-        <img
-          src="./images/mokhalad-musavi-SMB9kTF1L_s-unsplash.jpg"
-          alt="pik"
-        />
+        <img src="./images/katy-hardman-fK2nvTG7iCo-unsplash.jpg" alt="pik" />
       </div>
     </div>
   </body>
