--- a/webpag/foodpag.html
+++ b/webpag/foodpag.html
@@ -106,7 +106,7 @@
                 <form action="">
                     <div class="form-group">
                         <label>Name :-</label>
-                        <input type="text" name="" id="name" placeholder="Enter your name">
+                        <input type="text" name="fname" id="name" placeholder="Enter your name">
                     </div>
                      <div class="form-group">
                         <label>Email :-</label>
