create first_webpag file

--- a/webpag/foodpag.html
+++ b/webpag/foodpag.html
@@ -88,21 +88,16 @@
                  <div class="cilent-item">
                     <img src="../images/microsoft-transparent-logo-free-png.webp" alt="pik2">
                 </div>
-                 <div class="cilent-item">
+                 <!-- <div class="cilent-item">
                     <img src="../images/logo insta.jpg" alt="pik2">
-                </div>
+                </div> -->
                  <div class="cilent-item">
                     <img src="../images/logo-hp-photos-free-photo.png" alt="pik2">
                 </div>
              </div>
 
      </section>
-<!-- <br>
-<br>
-<br>
-<br>
-<br>
-<br>     -->
+
        <!-- section-4  -->
 
         <section class="contect-sec">
