--- a/advans_css.html/img.html
+++ b/advans_css.html/img.html
@@ -6,28 +6,22 @@
     <title>img</title>
   </head>
   <style>
-    .bg_image_4 {
-      background-image: url(../images/brooke-lark-HlNcigvUi4Q-unsplash.jpg);
+    .bg_image_2 {
+      background-color: steelblue;
+      background-image: url("../images/brooke-lark-HlNcigvUi4Q-unsplash.jpg");
       background-size: cover;
       background-position: center;
+      background-blend-mode: multiply;
       color: #fff;
       height: 500px;
     }
 
-    .content_4 {
-      position: relative;
-    }
-
-    .content_4::after {
-      content: "";
-      position: absolute;
-      background: #074f57;
-      inset: 0;
-      z-index: -1;
+    .content {
+      text-justify: center;
     }
   </style>
   <body>
-    <section class="bg_image_4">
+    <section class="bg_image_2">
       <div class="content">
         <h2>Hero title</h2>
         <p>Hero description here</p>
