--- a/New folder/foodweb.html
+++ b/New folder/foodweb.html
@@ -54,13 +54,71 @@
           veritatis tenetur delectus labore inventore quo commodi quis. Dolore
           dolorem labore assumenda magni sequi unde, expedita id saepe.
         </p>
+        <br />
+        <button class="btn">Order Now ></button>
       </div>
 
       <div class="img-1">
         <img src="../image--1/main_img.png" alt="picture-1" />
       </div>
-
-      <button class="btn">Order Now ></button>
     </section>
+
+    <!-- section-2  -->
+    <section class="section-2">
+      <div class="img-2">
+        <img src="../image--1/Food-Plate.png" height="600px" alt="picture-1" />
+      </div>
+
+      <div class="contant-2">
+        <h1>About <span>Us</span></h1>
+
+        <h3>Why Choose us?</h3>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus dolor eligendi assumenda,Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Necessitatibus dolor eligendi assumenda,
+          veritatis tenetur delectus labore inventore quo commodi quis. Dolore
+          dolorem labore assumenda magni sequi unde, expedita id saepe.
+        </p>
+        <br />
+        <button class="btn-1">Order Now ></button>
+      </div>
+
+      <!-- <button class="btn">Order Now ></button> -->
+    </section>
+    <!-- section-3  -->
+    <div class="menu" id="Menu">
+      <h1>Our<span>Menu</span></h1>
+
+      <div class="menu_box">
+        <div class="menu_card">
+          <div class="menu_image">
+            <img src="../image--1/buger.jpg" />
+          </div>
+
+          <div class="small_card">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+
+          <div class="menu_info">
+            <h2>Buger</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              assumenda voluptates
+            </p>
+            <h3>$20.00</h3>
+            <div class="menu_icon">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <a href="#" class="menu_btn">Order Now</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
