--- a/New folder/foodweb.html
+++ b/New folder/foodweb.html
@@ -88,12 +88,12 @@
       <!-- <button class="btn">Order Now ></button> -->
     </section>
     <!-- section-3  -->
-    <div class="menu" id="Menu">
-      <h1>Our<span>Menu</span></h1>
+    <div class="menu">
+      <h1>Our<span> Menu</span></h1>
 
       <div class="menu_box">
         <div class="menu_card">
-          <div class="menu_image">
+          <div class="menu-img">
             <img src="../image--1/buger.jpg" />
           </div>
 
