--- a/New folder/foodweb.html
+++ b/New folder/foodweb.html
@@ -692,29 +692,97 @@
       <div class="team-box">
         <div class="team-card">
           <div class="team_profile">
-            <img src="../image--1/review_1.png" />
+            <img src="../image--1/chef1.png " />
           </div>
 
           <div class="team_text">
             <h2 class="name">Chef</h2>
 
             <div class="team_icon">
-             <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit.</p>
+              <p>
+                Lorem ipsum dolor sit amet <br />
+                consectetur adipisicing elit.
+              </p>
             </div>
 
             <div class="team_social">
               <i class="fa-brands fa-facebook-f"></i>
               <i class="fa-brands fa-instagram"></i>
               <i class="fa-brands fa-twitter"></i>
-              <i class="fa-brands fa-linkedin-in"></i>
+            </div>
+          </div>
+        </div>
+        <div class="team-card">
+          <div class="team_profile">
+            <img src="../image--1/chef2.png" />
+          </div>
+
+          <div class="team_text">
+            <h2 class="name">Chef</h2>
+
+            <div class="team_icon">
+              <p>
+                Lorem ipsum dolor sit amet <br />
+                consectetur adipisicing elit.
+              </p>
             </div>
 
-          
+            <div class="team_social">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-twitter"></i>
+            </div>
           </div>
         </div>
 
-    </div>
+        <div class="team-card">
+          <div class="team_profile">
+            <img src="../image--1/chef3.jpg" />
+          </div>
 
+          <div class="team_text">
+            <h2 class="name">Chef</h2>
+
+            <div class="team_icon">
+              <p>
+                Lorem ipsum dolor sit amet <br />
+                consectetur adipisicing elit.
+              </p>
+            </div>
+
+            <div class="team_social">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-twitter"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="team-card">
+          <div class="team_profile">
+            <img src="../image--1/chef4.jpg" />
+          </div>
+
+          <div class="team_text">
+            <h2 class="name">Chef</h2>
+
+            <div class="team_icon">
+              <p>
+                Lorem ipsum dolor sit amet <br />
+                consectetur adipisicing elit.
+              </p>
+            </div>
+
+            <div class="team_social">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-twitter"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br /><br />
     <!-- footer  -->
     <div class="footer">
       <div class="container">
@@ -763,7 +831,7 @@
 
         <p class="end">
           Design by<span>
-              <i class="fa-solid fa-face-grin"></i> WT Master Code</span
+            <i class="fa-solid fa-face-grin"></i> WT Master Code</span
           >
         </p>
       </div>
