--- a/New folder/foodweb.html
+++ b/New folder/foodweb.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>foodweb</title>
     <link rel="stylesheet" href="../New folder/foodweb.css" />
+    <link rel="stylesheet" href="../New folder/phone.css" />
 
     <!-- icon cdn  -->
     <link
@@ -85,7 +86,7 @@
         <button class="btn-1">Order Now ></button>
       </div>
 
-      <!-- <button class="btn">Order Now ></button> -->
+     
     </section>
     <!-- section-3  -->
     <div class="menu">
