make responsive web site

--- a/New folder/foodweb.html
+++ b/New folder/foodweb.html
@@ -60,14 +60,19 @@
       </div>
 
       <div class="img-1">
-        <img src="../image--1/main_img.png" alt="picture-1" />
+        <img src="../image--1/main_img.png" width="100%" alt="picture-1" />
       </div>
     </section>
 
     <!-- section-2  -->
     <section class="section-2">
       <div class="img-2">
-        <img src="../image--1/Food-Plate.png" height="600px" alt="picture-1" />
+        <img
+          src="../image--1/Food-Plate.png"
+          height="400px"
+          width="100%"
+          alt="picture-1"
+        />
       </div>
 
       <div class="contant-2">
@@ -85,8 +90,6 @@
         <br />
         <button class="btn-1">Order Now ></button>
       </div>
-
-     
     </section>
     <!-- section-3  -->
     <div class="menu">
