--- a/New folder/zay.html
+++ b/New folder/zay.html
@@ -64,42 +64,17 @@
     <!-- slider  -->
     <div class="container">
       <div class="owl-carousel owl-theme">
-        <div class="item"><img src="../images/slider-1.jpg" alt="pik-1" /></div>
-        <div class="item"><img src="../images/slider-2.jpg" alt="pik-2" /></div>
-        <div class="item"><img src="../images/slider-3.jpg" alt="pik-3" /></div>
+        <div class="item">
+          <img src="../images/slider-3.jpg" height="600px" alt="pik-1" />
+        </div>
+        <div class="item">
+          <img src="../images/slider-2.jpg" height="600px" alt="pik-2" />
+        </div>
+        <div class="item">
+          <img src=" ../images/slider-1.jpg" height="600px" alt="pik-3" />
+        </div>
       </div>
     </div>
-
-    <script>
-      $(document).ready(function () {
-        $(".owl-carousel").owlCarousel({
-          items: 1,
-          margin: 20,
-          nav: true,
-          //   mouseDrag: false,
-          //   stagePadding: 50,
-          autoplay: true,
-          autoplayTimeout: 2000,
-          animateOut: "animateOut",
-          animateIn: "animateIn",
-          //   responsive: {
-          //     0: {
-          //       items: 1,
-          //       nav: true,
-          //     },
-          //     600: {
-          //       items: 3,
-          //       nav: false,
-          //     },
-          //     1000: {
-          //       items: 5,
-          //       nav: true,
-          //       loop: false,
-          //     },
-          //   },
-        });
-      });
-    </script>
 
     <!-- section-1  -->
     <section class="review">
@@ -338,5 +313,36 @@
       </div>
       <p class="end">Copyright © 2021 Company Name | Designed by Dipakpal</p>
     </div>
+
+    <script>
+      $(document).ready(function () {
+        $(".owl-carousel").owlCarousel({
+          items: 1,
+          margin: 20,
+          nav: true,
+          //   mouseDrag: false,
+          //   stagePadding: 50,
+          autoplay: true,
+          autoplayTimeout: 2000,
+          animateOut: "animateOut",
+          animateIn: "animateIn",
+          //   responsive: {
+          //     0: {
+          //       items: 1,
+          //       nav: true,
+          //     },
+          //     600: {
+          //       items: 3,
+          //       nav: false,
+          //     },
+          //     1000: {
+          //       items: 5,
+          //       nav: true,
+          //       loop: false,
+          //     },
+          //   },
+        });
+      });
+    </script>
   </body>
 </html>
