--- a/New folder/zay.html
+++ b/New folder/zay.html
@@ -10,6 +10,7 @@
     />
 
     <link rel="stylesheet" href="./zay.css" />
+     <link rel="stylesheet" href="./zay_phon.css" />
 
     <!-- css link -->
     <link rel="stylesheet" href="./css/owl.carousel.css" />
@@ -185,7 +186,7 @@
               <div class="product_price">$ 24,000</div>
             </div>
 
-            <h2 class="name">Gym weight</h2>
+            <h2 class="name">Cloud Nike Shoes</h2>
 
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -213,7 +214,7 @@
               <div class="product_price">$ 24,000</div>
             </div>
 
-            <h2 class="name">Gym weight</h2>
+            <h2 class="name">Summer Addides</h2>
 
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
