--- a/New folder/zay.html
+++ b/New folder/zay.html
@@ -8,6 +8,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <!-- google font link  -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="./zay.css" />
     <link rel="stylesheet" href="./zay_phon.css" />
@@ -79,7 +87,7 @@
             </p>
           </div>
           <div class="phr-img">
-            <img src="../images/slider-1.jpg" alt="pik-1" />
+            <img src=" ../images/slider-3.jpg" alt="pik-1" />
           </div>
         </div>
 
@@ -113,7 +121,7 @@
             </p>
           </div>
           <div class="phr-img">
-            <img src="../images/slider-3.jpg" alt="pik-3" />
+            <img src="../images/slider-1.jpg" alt="pik-3" />
           </div>
         </div>
       </div>
