--- a/New folder/zay.html
+++ b/New folder/zay.html
@@ -47,27 +47,31 @@
           </div>
         </div>
       </div>
-      z`
     </section>
     <!-- header  -->
     <header id="header">
       <nav>
-        <div class="logo">
-          <p>Zay</p>
-        </div>
+        <input type="checkbox" id="chek" />
+        <label for="chek" class="chekbtn">
+          <i class="fas fa-bars"></i>
+        </label>
+
+        <lable class="logo">Zay</lable>
 
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">About</a></li>
           <li><a href="">Shop</a></li>
           <li><a href="">Contact</a></li>
-        </ul>
 
-        <div class="icon">
-          <i class="fa-solid fa-magnifying-glass"></i>
-          <i class="fa-solid fa-heart"></i>
-          <i class="fa-solid fa-cart-shopping"></i>
-        </div>
+          <li>
+            <input type="search" id="gsearch" name="gsearch" />
+
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-cart-shopping"></i>
+          </li>
+        </ul>
       </nav>
     </header>
     <!-- slider  -->
@@ -183,16 +187,17 @@
     <!-- section-2  -->
 
     <section class="proudect">
-      <p class="Featured">Featured Product</p>
-      <p class="preg">
-        Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident.
-      </p>
-
+      <div class="texts">
+        <p class="Featured">Featured Product</p>
+        <p class="preg">
+          Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident.
+        </p>
+      </div>
       <div class="proudect-box">
         <div class="proudect-card">
           <div class="proudect-img">
-            <img src="../images/watch-4.jpg" alt="a" />
+            <img src="../images/watch-5.jpg" alt="a" />
           </div>
 
           <div class="proudect-text">
@@ -220,7 +225,7 @@
 
         <div class="proudect-card">
           <div class="proudect-img">
-            <img src="../images/watch-6.jpg" alt="a" />
+            <img src="../images/watch-4.jpg" alt="a" />
           </div>
 
           <div class="proudect-text">
@@ -248,7 +253,7 @@
 
         <div class="proudect-card">
           <div class="proudect-img">
-            <img src="../images/watch-5.jpg" alt="a" />
+            <img src="../images/watch-6.jpg" alt="a" />
           </div>
 
           <div class="proudect-text">
