--- a/New folder/zay.html
+++ b/New folder/zay.html
@@ -189,6 +189,7 @@
     <section class="proudect">
       <div class="texts">
         <p class="Featured">Featured Product</p>
+
         <p class="preg">
           Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
           pariatur. Excepteur sint occaecat cupidatat non proident.
@@ -286,6 +287,7 @@
         <div class="row">
           <div class="footer-col">
             <span style="color: green">Zay Shop</span>
+            <hr class="hr-1" />
             <div class="product">
               <p>
                 <i class="fa-solid fa-envelope"></i> 123 Consectetur at ligula
@@ -302,6 +304,7 @@
           <div class="footer-col">
             <span>Products</span>
 
+            <hr class="hr-1" />
             <ul class="product">
               <li><a class="text-" href="#">Luxury</a></li>
               <br />
@@ -331,6 +334,7 @@
 
           <div class="footer-col">
             <span>Further Info</span>
+            <hr class="hr-1" />
             <ul class="product">
               <li><a href="">Home</a></li>
               <br />
@@ -345,7 +349,7 @@
           </div>
         </div>
         <br />
-        <hr />
+        <hr class="hr" />
         <section id="footer">
           <div class="footer-price">
             <div class="footer_icon">
