--- a/navbar.html
+++ b/navbar.html
@@ -137,9 +137,9 @@
         <li>
           <input type="search" id="gsearch" name="gsearch" />
 
-          <i class="fa-solid fa-magnifying-glass"></i>
-          <i class="fa-solid fa-heart"></i>
-          <i class="fa-solid fa-cart-shopping"></i>
+          <i class="a1 fa-solid fa-magnifying-glass"></i>
+          <i class="a1 fa-solid fa-heart"></i>
+          <i class="a1 fa-solid fa-cart-shopping"></i>
         </li>
       </ul>
     </nav>
