--- a/New folder/zay.html
+++ b/New folder/zay.html
@@ -49,7 +49,7 @@
       </div>
     </section>
     <!-- header  -->
-    <header id="header">
+    <!-- <header id="header">
       <nav>
         <input type="checkbox" id="chek" />
         <label for="chek" class="chekbtn">
@@ -73,7 +73,7 @@
           </li>
         </ul>
       </nav>
-    </header>
+    </header> -->
     <!-- slider  -->
     <div id="slider">
       <div id="owl-demo" class="owl-carousel owl-theme">
@@ -218,7 +218,7 @@
 
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Repellendus quam facere blanditiis.
+              Repellendus quam amet ipsum consectetur facere blanditiis.
             </p>
             <h2 class="rev">Review (24)</h2>
           </div>
@@ -246,7 +246,8 @@
 
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Repellendus quam facere blanditii.
+              Repellendus Lorem ipsum dolor sit, amet consectetur adipisicing
+              quam facere blanditii.
             </p>
             <h2 class="rev">Review (24)</h2>
           </div>
@@ -273,8 +274,9 @@
             <h2 class="name">Summer Addides</h2>
 
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Repellendus quam facere blanditiis.
+              Lorem ipsum dolor sit, amet consectetur Lorem ipsum dolor sit,
+              amet consectetur adipisicingadipisicing elit. Repellendus quam
+              facere blanditiis.
             </p>
             <h2 class="rev">Review (24)</h2>
           </div>
@@ -364,9 +366,9 @@
                 type="search"
                 id="search"
                 name="gsearch"
-                placeholder="Email addresh "
+                placeholder="Email addresh"
               />
-              <input type="submit" class="btn-submit" />
+              <button class="btn-submit">subscribe</button>
             </div>
           </div>
         </section>
