--- a/New folder/zay.html
+++ b/New folder/zay.html
@@ -28,6 +28,11 @@
     <!-- js link  -->
     <script src="./js/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
+    <style>
+      input#search {
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <section id="nav">
@@ -49,7 +54,7 @@
       </div>
     </section>
     <!-- header  -->
-    <!-- <header id="header">
+    <header id="header">
       <nav>
         <input type="checkbox" id="chek" />
         <label for="chek" class="chekbtn">
@@ -73,7 +78,7 @@
           </li>
         </ul>
       </nav>
-    </header> -->
+    </header>
     <!-- slider  -->
     <div id="slider">
       <div id="owl-demo" class="owl-carousel owl-theme">
@@ -307,50 +312,40 @@
             <span>Products</span>
 
             <hr class="hr-1" />
-            <ul class="product">
-              <li><a class="text-" href="#">Luxury</a></li>
-              <br />
-              <li><a class="text-" href="#">Sport Wear</a></li>
-              <br />
-              <li>
-                <a class="text-" href="#">Men's Shoes</a>
-              </li>
-              <br />
-              <li>
-                <a class="text-" href="#">Women's Shoes</a>
-              </li>
-              <br />
-              <li>
-                <a class="text-" href="#">Popular Dress</a>
-              </li>
-              <br />
-              <li>
-                <a class="text-" href="#">Gym Accessories</a>
-              </li>
-              <br />
-              <li>
-                <a class="text-" href="#">Sport Shoes</a>
-              </li>
-            </ul>
+            <div class="product">
+              <p>Luxury</p>
+
+              <p>Sport Wear</p>
+
+              <p>Men's Shoes</p>
+
+              <p>Women's Shoes</p>
+
+              <p>Popular Dress</p>
+
+              <p>Gym Accessories</p>
+
+              <p>Sport Shoes</p>
+            </div>
           </div>
 
           <div class="footer-col">
             <span>Further Info</span>
             <hr class="hr-1" />
-            <ul class="product">
-              <li><a href="">Home</a></li>
-              <br />
-              <li><a href="">About Us</a></li>
-              <br />
-              <li><a href="">Shop Location</a></li>
-              <br />
-              <li><a href="">FAQs</a></li>
-              <br />
-              <li><a href="">Contact</a></li>
-            </ul>
+            <div class="product">
+              <p>Home</p>
+
+              <p>About Us</p>
+
+              <p>Shop Location</p>
+
+              <p>FAQs</p>
+
+              <p>Contact</p>
+            </div>
           </div>
         </div>
-        <br />
+
         <hr class="hr" />
         <section id="footer">
           <div class="footer-price">
