--- a/website/zay.html
+++ b/website/zay.html
@@ -28,7 +28,6 @@
     <!-- js link  -->
     <script src="./js/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
-    
   </head>
   <body>
     <section id="nav">
@@ -188,98 +187,72 @@
     <!-- section-2  -->
 
     <section class="proudect">
-      <div class="texts">
-        <p class="Featured">Featured Product</p>
+      <h1 class="head">Featured Product</h1>
+      <p class="head-pre">
+        Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident.
+      </p>
 
-        <p class="preg">
-          Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident.
-        </p>
-      </div>
-      <div class="proudect-box">
-        <div class="proudect-card">
-          <div class="proudect-img">
-            <img src="../images/watch-5.jpg" alt="a" />
-          </div>
-
-          <div class="proudect-text">
-            <div class="rating_price">
-              <div class="review_icon">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
-              </div>
-
-              <div class="product_price">$ 24,000</div>
+      <div class="review_box">
+        <div class="proudect_card">
+          <img src="../images/watch-5.jpg" />
+          <div class="proudect_text">
+            <div class="review-icon">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-
-            <h2 class="name">Gym weight</h2>
-
+            <span class="gym">Gym weight</span>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Repellendus quam amet ipsum consectetur facere blanditiis.
+              Repellendus quam facere blanditiis in fugiat tempore ullam ipsa
+              voluptates repudiandae dignissimos deleniti mollitia eum.
             </p>
-            <h2 class="rev">Review (24)</h2>
+            <p class="Review">Review (24)</p>
           </div>
         </div>
 
-        <div class="proudect-card">
-          <div class="proudect-img">
-            <img src="../images/watch-4.jpg" alt="a" />
-          </div>
-
-          <div class="proudect-text">
-            <div class="rating_price">
-              <div class="review_icon">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
-              </div>
-
-              <div class="product_price">$ 24,000</div>
+        <div class="proudect_card">
+          <img src="../images/watch-4.jpg" />
+          <div class="proudect_text">
+            <div class="review-icon">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-
-            <h2 class="name">Cloud Nike Shoes</h2>
+            <span class="gym">Cloud Nike Shoes</span>
 
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Repellendus Lorem ipsum dolor sit, amet consectetur adipisicing
-              quam facere blanditii.
+              Repellendus quam facere blanditiis in fugiat tempore ullam ipsa
+              voluptates repudiandae dignissimos deleniti mollitia eum.
             </p>
-            <h2 class="rev">Review (24)</h2>
+            <p class="Review">Review (24)</p>
           </div>
         </div>
 
-        <div class="proudect-card">
-          <div class="proudect-img">
-            <img src="../images/watch-6.jpg" alt="a" />
-          </div>
-
-          <div class="proudect-text">
-            <div class="rating_price">
-              <div class="review_icon">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star-half-stroke"></i>
-              </div>
-
-              <div class="product_price">$ 24,000</div>
+        <div class="proudect_card">
+          <img src="../images/watch-6.jpg" />
+          <div class="proudect_text">
+            <div class="review-icon">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
             </div>
-
-            <h2 class="name">Summer Addides</h2>
+            <span class="gym">Summer Addides</span>
 
             <p>
-              Lorem ipsum dolor sit, amet consectetur Lorem ipsum dolor sit,
-              amet consectetur adipisicingadipisicing elit. Repellendus quam
-              facere blanditiis.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Repellendus quam facere blanditiis in fugiat tempore ullam ipsa
+              voluptates repudiandae dignissimos deleniti mollitia eum.
             </p>
-            <h2 class="rev">Review (24)</h2>
+            <p class="Review">Review (24)</p>
           </div>
         </div>
       </div>
@@ -367,6 +340,11 @@
       <p class="end">Copyright © 2021 Company Name | Designed by Dipakpal</p>
     </div>
 
+
+
+
+
+    
     <script src="./js/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script>
