--- a/website/zay.html
+++ b/website/zay.html
@@ -183,7 +183,8 @@
         </div>
       </div>
     </section>
-
+    <br />
+    <br />
     <!-- section-2  -->
 
     <section class="proudect">
@@ -258,6 +259,7 @@
       </div>
     </section>
     <!-- section-3  -->
+
     <div class="footer">
       <div class="container">
         <div class="row">
@@ -316,35 +318,31 @@
         </div>
 
         <hr class="hr" />
-        <section id="footer">
-          <div class="footer-price">
-            <div class="footer_icon">
-              <i class="fa-brands fa-facebook"></i>
-              <i class="fa-brands fa-instagram"></i>
-              <i class="fa-brands fa-twitter"></i>
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
 
-            <div class="footer_serch">
-              <input
-                type="search"
-                id="search"
-                name="gsearch"
-                placeholder="Email addresh"
-              />
-              <button class="btn-submit">subscribe</button>
-            </div>
+        <div class="footer-price">
+          <div class="footer_icon">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-solid fa-magnifying-glass"></i>
           </div>
-        </section>
+
+          <div class="footer_serch">
+            <input
+              type="search"
+              id="search"
+              name="gsearch"
+              placeholder="Email addresh"
+            />
+            <a href="#" class="btn-submit">subscribe</a>
+          </div>
+        </div>
       </div>
-      <p class="end">Copyright © 2021 Company Name | Designed by Dipakpal</p>
+      <p class="end">
+        <span> Copyright © 2021 Company Name | Designed by Dipakpal </span>
+      </p>
     </div>
 
-
-
-
-
-    
     <script src="./js/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script>
